<resources>
    <string name="app_name">Self5The2.0</string>
    <string name="btnJoinMembership">Join Membership</string>
    <string name="btnLogin">Login</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnAddMenu">ADD</string>
    <string name="dialogTitle">변경할 내용을 입력하세요.</string>
    <string name="dialogEdit1" />
    <string name="dialogBtnCancel">취소</string>
    <string name="dialogBtnOK">확인</string>
    <string name="dialogEditHint">변경할 내용 입력</string>
    <string name="ok_btn_click">OK 버튼 클릭</string>
    <string name="cancel_btn_click">Cancell 버튼 클릭</string>
    <string name="title_activity_menu_list">MenuList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_shopping_bsk">ShoppingBSK</string>
    <string name="title_activity_num_statement">NumStatementActivity</string>
</resources>
