<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/dialogTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/dialogEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialogEditHint"
        android:inputType="textPersonName"
        android:text="@string/dialogEdit1"
        android:textSize="14dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialogBtnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text="@string/dialogBtnOK"
            android:layout_marginRight="2dp"/>

        <Button
            android:id="@+id/dialogBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/dialogBtnCancel"
            android:layout_marginLeft="2dp" />
    </LinearLayout>

</LinearLayout>